Label_group: removed overflow, changed flex-basis to width to prevent overflow

--- a/src/Components/SearchInput/SearchInput.module.css
+++ b/src/Components/SearchInput/SearchInput.module.css
@@ -1,7 +1,6 @@
 .container {
   position: relative;
   flex-grow: 1;
-  margin-right: 8px;
   width: 100%;
 }
 
