--- a/src/index.css
+++ b/src/index.css
@@ -91,9 +91,8 @@
 }
 .label_group_label {
   font-size: .8rem;
-  flex-basis: 20%;
+  width: 20%;
 }
 .label_group_content {
-  flex-basis: 80%;
-  overflow: hidden;
+  width: 80%;
 }
